fix: section heading letter spacing
https://jira.akqa.net/browse/SWW-323

--- a/src/content/dam/wbx/us/images/workspace/styles/_fonts.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_fonts.scss
@@ -136,6 +136,7 @@
 @mixin ws-info-modal-section-heading-font {
   @include ws-h4-font;
   font-weight: 400;
+  letter-spacing: 0.02em;
   color: $grey;
 }
 
